--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "^5.4.3",
     "govuk-frontend": "^3.13.0",
     "prop-types": "^15.7.2",
     "turbolinks": "^5.2.0"
   },
-  "version": "0.1.13",
+  "version": "0.1.14",
   "main": "index.js",
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
