--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "dependencies": {
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^5.4.3",
+    "axios": "^0.25.0",
+    "dropzone": "^5.9.3",
     "govuk-frontend": "^3.13.0",
     "prop-types": "^15.7.2",
-    "turbolinks": "^5.2.0"
+    "spark-md5": "^3.0.2",
+    "turbolinks": "^5.2.0",
+    "uuid": "^8.3.2"
   },
   "version": "0.1.14",
   "main": "index.js",
