--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^5.4.3",
     "axios": "^0.25.0",
-    "dropzone": "^5.9.3",
+    "dropzone": "^6.0.0-beta.2",
     "govuk-frontend": "^3.13.0",
     "prop-types": "^15.7.2",
     "spark-md5": "^3.0.2",
