(RST-5628) Date field no longer converts values to integers to allow an invalid value to be re presented to the user for correction

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,6 @@ steps:
       bundle install
     displayName: 'Install Ruby and dependencies'
   - script: |
-      bash -lc "cd test/dummy && RAILS_ENV=test bundle exec rails db:create db:migrate assets:precompile"
+      bash -lc "cd test/dummy && RAILS_ENV=test bundle exec rails db:create db:migrate assets:precompile webdrivers:chromedriver:update"
       bash -lc "bundle exec rspec"
     displayName: 'Run RSpec tests with asset precompilation'
