--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,4 +15,15 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - name: Setup dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gnupg2 curl
+          gpg2 --keyserver hkp://keyserver.ubuntu.com --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
+          curl -sSL https://rvm.io/mpapis.asc | gpg --import -
+          curl -sSL https://get.rvm.io | bash -s stable
+          source ~/.rvm/scripts/rvm
+          rvm install 3.2.2
+          gem install bundler
+          bundle install
       - run: echo "🍏 This job's status is ${{ job.status }}."
