(RST-5642) Experiment with github actions - added workaround for openssl legacy provider in tests

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,6 +28,6 @@ jobs:
           bundle install
       - name: Run tests
         run: |
-          bash -lc "cd test/dummy && RAILS_ENV=test bundle exec rails db:create db:migrate assets:precompile"
+          bash -lc "cd test/dummy && RAILS_ENV=test NODE_OPTIONS=--openssl-legacy-provider bundle exec rails db:create db:migrate assets:precompile"
           bash -lc "bundle exec rspec"
       - run: echo "🍏 This job's status is ${{ job.status }}."
