(RST-5642) Gem and ruby upgrades (#139)
* (RST-5642) Upgraded ruby to 3.2.2 for testing

* (RST-5642) Added jenkins file

* (RST-5642) Upgraded activerecord-nulldb-adapter

* (RST-5642) Upgraded capybara

* (RST-5642) Upgraded selenium-webdriver

* (RST-5642) Upgraded et_test_helpers

* (RST-5642) Upgraded site_prism

* (RST-5642) Upgraded typhoeus

* (RST-5642) Upgraded solargraph

* (RST-5642) Upgraded rspec-rails

* (RST-5642) Removed solargraph

* (RST-5642) Restricted rack to <3 and upgraded rails

* (RST-5642) Removed webdrivers and upgraded selenium-webdriver gem

* (RST-5642) Upgraded govuk-frontend to 4.7.0

* (RST-5642) Added renovate config

* (RST-5642) Experiment with github actions

* (RST-5642) Experiment with github actions - adding rvm

* (RST-5642) Experiment with github actions - adding rspec

* (RST-5642) Experiment with github actions - added workaround for openssl legacy provider in tests

* (RST-5642) Github actions now working

* (RST-5642) Bumped version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 variables:
-  ruby_version: "2.7.7"
+  ruby_version: "3.2.2"
   nodejs_version: "14.x"
 steps:
   - task: NodeTool@0
@@ -25,11 +25,11 @@ steps:
       curl -sSL https://rvm.io/mpapis.asc | gpg --import -
       curl -sSL https://get.rvm.io | bash -s stable
       source ~/.rvm/scripts/rvm
-      rvm install 2.7.7
+      rvm install 3.2.2
       gem install bundler
       bundle install
     displayName: 'Install Ruby and dependencies'
   - script: |
-      bash -lc "cd test/dummy && RAILS_ENV=test bundle exec rails db:create db:migrate assets:precompile webdrivers:chromedriver:update"
+      bash -lc "cd test/dummy && RAILS_ENV=test bundle exec rails db:create db:migrate assets:precompile"
       bash -lc "bundle exec rspec"
     displayName: 'Run RSpec tests with asset precompilation'
